[gd_scene load_steps=4 format=3 uid="uid://bbfwgc53jd2tb"]

[ext_resource type="Script" path="res://Scripts/InputManager/InputManager.gd" id="1_yvn7h"]
[ext_resource type="Texture2D" uid="uid://bcxvjdxui126e" path="res://Assets/Towers/2 Idle/1.png" id="2_bahuk"]
[ext_resource type="PackedScene" uid="uid://dg0x25nhh0y1d" path="res://Scenes/InputManager/upgrade_popup.tscn" id="3_aypm7"]

[node name="InputManager" type="Node"]
script = ExtResource("1_yvn7h")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TowerPreview" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(-116, 136)
texture = ExtResource("2_bahuk")

[node name="UpgradePopup" parent="CanvasLayer" instance=ExtResource("3_aypm7")]
